--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -62,10 +62,6 @@
     transform: scale(1.1);
 }
 
-.iconoSocialNetwork {
-    transition: transform 0.5s;
-}
-
-.iconoSocialNetwork:hover {
-    transform: scale(1.1);
+.imageDarken:hover {
+    filter: brightness(0.75);
 }
