--- a/scss/_estilos.scss
+++ b/scss/_estilos.scss
@@ -1,64 +1,63 @@
 .bgAmarillo {
-    background-color: $colorPrimario;
+  background-color: $colorPrimario;
 }
 
 .bgAmarilloOscuro {
-    background-color: $colorTerciario;
+  background-color: $colorTerciario;
 }
 
 .titulo2 {
-    color: $colorPrimario;
-    background-color: $colorMascara;
+  color: $colorPrimario;
+  background-color: $colorMascara;
 }
 
 .mascara1 {
-    background-color: $colorMascara;
-    .margen1 {
-        @include margenes(35vh, 2rem);
-    }
+  background-color: $colorMascara;
+  .margen1 {
+    @include margenes(35vh, 2rem);
+  }
 }
 
 .cuadro1 {
-    color: $colorPrimario;
-    border: 1px solid $colorPrimario;
-    border-radius: 5px;
-    text-align: center;
+  color: $colorPrimario;
+  border: 1px solid $colorPrimario;
+  border-radius: 5px;
+  text-align: center;
 }
 
 .bgRojo {
-    background-color: $colorSecundario;
+  background-color: $colorSecundario;
 }
 
 .textoAmarillo {
-    color: $colorPrimario;
+  color: $colorPrimario;
 }
 
 .tamañoIcono {
-    width: 1em;
-    height: 1em;
+  width: 1em;
+  height: 1em;
 }
 
 .headerPages__bg {
-    background-image: url('../images/ferraribackground1.jpg');
-    height: 35vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url("../images/ferraribackground1.jpg");
+  height: 35vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .tarjeta1 {
-    max-width: 24rem;
-    background-color:$colorSecundario;
+  max-width: 24rem;
+  background-color: $colorSecundario;
 }
 
 .card {
-    transition: transform 0.5s;
-}
-
-.card:hover {
+  transition: transform 0.5s;
+  &:hover {
     transform: scale(1.1);
+  }
 }
 
 .imageDarken:hover {
-    filter: brightness(0.75);
+  filter: brightness(0.75);
 }
